--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test page</title>
-    <link href="./assets/css/style.css" rel="stylesheet" type="text/css">
+    <link href="./assets/stylesheets/css/normalize.css" rel="stylesheet" type="text/css">
+    <link href="./assets/stylesheets/css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    
+  <header class="header"/>
+  </header>
+  <main class="main">
+  </main>
+  <footer class="footer">   
+  </footer>
 </body>
 </html>
