--- a/src/index.html
+++ b/src/index.html
@@ -18,34 +18,73 @@
   </head>
   <body>
     <header class="header">
-      <div div class="header__logo">
-        <img src="./assets/images/svg/LOGO-min.svg" alt="" />
-      </div>
-      <nav class="navigation">
-        <li><a href="#!">ГЛАВНАЯ</a></li>
-        <li><a href="#!">МЕНЮ</a></li>
-        <li><a href="#!">О НАС</a></li>
-        <li><a href="#!">БРОНЬ</a></li>
-      </nav>
-      <a href="#!">
+      <div class="header-container container">
         <img
-          class="cart__svg"
-          src="./assets/images/svg/cart-min.svg"
-          alt="cart"
+          class="header__logo"
+          src="./assets/images/svg/LOGO-min.svg"
+          alt=""
         />
-      </a>
-      <div class="divider"></div>
-      <section class="number__section">
+        <nav class="navigation">
+          <ul class="navigation__list">
+            <li class="list__item">
+              <a class="item__link" href="#!">ГЛАВНАЯ</a>
+            </li>
+            <li class="list__item"><a class="item__link" href="#!">МЕНЮ</a></li>
+            <li class="list__item">
+              <a class="item__link" href="#!">О НАС</a>
+            </li>
+            <li class="list__item">
+              <a class="item__link" href="#!">БРОНЬ</a>
+            </li>
+          </ul>
+        </nav>
         <a href="#!">
-          <img src="./assets/images/svg/phone-min.svg" alt="" />
-          +888-777-76-34
+          <img
+            class="cart__svg"
+            src="./assets/images/svg/cart-min.svg"
+            alt="cart"
+          />
         </a>
-        <p>Свяжитесь с нами для бронирования</p>
-      </section>
-      <button class="button"><p>Заказ столика</p></button>
+        <div class="divider"></div>
+        <section class="number__section">
+          <a href="#!" class="number number__image"> +888-777-76-34 </a>
+          <h3 class="number__label">Свяжитесь с нами для бронирования</h3>
+        </section>
+        <button class="button">Заказ столика</button>
+      </div>
     </header>
-    <main class="main"></main>
-    <div></div>
+    <main class="main">
+      <section class="hero">
+        <div class="container">
+          <div class="headline">
+            <h2 class="headline__tittle accost-text">Добро пожаловать в</h2>
+            <h1 class="headline__tittle restaurant-text">Наш ресторан</h1>
+            <h3 class="headline__tittle slogan-text">ДОМ ЛУЧШЕЙ ЕДЫ</h3>
+            <button class="button headline__button">MENU</button>
+          </div>
+          <div class="container-intro">
+            <div class="intro">
+              <p class="intro-title">Магическая <span>Атмосфера</span></p>
+              <p class="intro-text">
+                В нашем заведении царит магическая атмосфера наполненная
+                вкусными ароматами
+              </p>
+            </div>
+            <div class="intro">
+              <p class="intro-title">Лучшее качество <span>Еды</span></p>
+              <p class="intro-text">Качество нашей<br />Еды - отменное!</p>
+            </div>
+            <div class="intro">
+              <p class="intro-title">Недорогая <span>Еда</span></p>
+              <p class="intro-text">
+                Стоимость нашей Еды зависит только от ее количества. Качество
+                всегда на высоте!
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer class="footer"></footer>
   </body>
 </html>
