story-block add styles

--- a/src/index.html
+++ b/src/index.html
@@ -38,13 +38,11 @@
             </li>
           </ul>
         </nav>
-        <a href="#!">
-          <img
-            class="cart__svg"
-            src="./assets/images/svg/cart-min.svg"
-            alt="cart"
-          />
-        </a>
+        <img
+          class="cart__svg"
+          src="./assets/images/svg/cart-min.svg"
+          alt="cart"
+        />
         <div class="divider"></div>
         <section class="number__section">
           <a href="#!" class="number number__image"> +888-777-76-34 </a>
@@ -82,6 +80,44 @@
               </p>
             </div>
           </div>
+        </div>
+      </section>
+      <section class="story-block container">
+        <div class="story__text">
+          <h1>Наша <span>История</span></h1>
+          <p>
+            Как и у любого другого самобытного места, у нас есть своя, особая
+            история. Идея ресторана пришла основателям неожиданно. Во время
+            прогулки по лесу создатель нашего ресторана застрял в сотнях
+            километров от ближайшего населенного пункта. Вдали от цивилизации и
+            связи им пришлось навремя обустровать себе нехитрый быт, добывать и
+            готовить себе еду.
+          </p>
+          <div class="story__number">
+            <div>
+              <p class="text-number">93</p>
+              <p class="text-label">Напитки</p>
+            </div>
+            <div>
+              <p class="text-number">206</p>
+              <p class="text-label">Еда</p>
+            </div>
+            <div>
+              <p class="text-number">71</p>
+              <p class="text-label">Закуски</p>
+            </div>
+          </div>
+        </div>
+        <div class="story__images">
+          <img
+            class="image image__cafe"
+            src="./assets/images/cafe-img.png"
+            alt="flat"
+          /><img
+            class="image image__cake"
+            src="./assets/images/cake-img.jpg"
+            alt="cake"
+          />
         </div>
       </section>
     </main>
