--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
         </section>
         <section class="story-block container">
           <div class="story__text">
-            <h1>Наша <span>История</span></h1>
+            <h2>Наша <span>История</span></h2>
             <p>
               Как и у любого другого самобытного места, у нас есть своя, особая
               история. Идея ресторана пришла основателям неожиданно. Во время
@@ -124,7 +124,15 @@
           </div>
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__container container">
+          <div>
+            <h2 class="footer__label">Отпразднуйте в одном из самых лучших ресторанов.</h2>
+            <p class="footer__sale">Только в этом месяце бизнес-ланч от 250 ₽</p>
+          </div>
+          <button class="button">Заказ столика</button>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
