yen add new effects

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,9 @@
           />
           <div class="divider"></div>
           <section class="number__section">
-            <a href="#!" class="number number__image"> +888-777-76-34 </a>
+            <a href="tel:+8888888888" class="number number__image">
+              +888-777-76-34
+            </a>
             <h3 class="number__label">Свяжитесь с нами для бронирования</h3>
           </section>
           <button class="button">Заказ столика</button>
@@ -127,8 +129,12 @@
       <footer class="footer">
         <div class="footer__container container">
           <div>
-            <h2 class="footer__label">Отпразднуйте в одном из самых лучших ресторанов.</h2>
-            <p class="footer__sale">Только в этом месяце бизнес-ланч от 250 ₽</p>
+            <h2 class="footer__label">
+              Отпразднуйте в одном из самых лучших ресторанов.
+            </h2>
+            <p class="footer__sale">
+              Только в этом месяце бизнес-ланч от 250 ₽
+            </p>
           </div>
           <button class="button">Заказ столика</button>
         </div>
